--- a/media.css
+++ b/media.css
@@ -78,6 +78,11 @@ button {
   border-radius: 5px;
   border-style: solid;
   padding: 10px;
-  font-weight: bold;
+  font-weight: normal;
   border-width: thin;
+  transition: transform 0.3s ease
+}
+
+button:hover {
+  transform: scale(1.05);
 }
